syntax = "proto3";

package cresplanex.bloader.v1;

option go_package = "github.com/cresplanex/bloader/gen/pb/cresplanex/bloader/v1";

import "cresplanex/bloader/v1/encrypt.proto";

message StoreDataList {
  repeated StoreData data = 1;
}

message StoreData {
  string bucket_id = 1;
  string store_key = 2;
  bytes data = 3;
  Encryption encryption = 4;
}

message StoreExportDataList {
  repeated StoreExportData data = 1;
}

message StoreExportData {
  string bucket_id = 1;
  string store_key = 2;
  bytes data = 3;
}

message StoreImportRequestList {
  repeated StoreImportRequest data = 1;
}

message StoreImportRequest {
  string bucket_id = 1;
  string store_key = 2;
  Encryption encryption = 4;
}
